apps/tiddlywiki/oldstuff/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiddlywiki
  labels:
    app.kubernetes.io/name: tiddlywiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tiddlywiki
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tiddlywiki
    spec:
      containers:
      - name: tiddlywiki
        image: tintinho/tiddlywiki:5.1.23-armhf
        command: ["tiddlywiki"]
        args:
          - "/data"
          - "--listen"
          - "host=0.0.0.0"
          - "authenticated-user-header=x-authenticated-user"
          - "readers=(anon)"
          - "writers=(authenticated)"
        ports:
          - name: http
            containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /data
      - name: nginx
        image: nginx:1.21.3
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      - name: nginx-ldap-auth
        image: tintinho/nginx-ldap-auth:1-armhf
        ports:
          - name: http
            containerPort: 8888
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: tiddlywiki-data
      - name: nginx-config
        configMap:
          name: tiddlywiki-nginx-config
