apps/tiddlywiki/oldstuff/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tiddlywiki
spec:
  selector:
    app.kubernetes.io/name: tiddlywiki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
