apps/tiddlywiki/oldstuff/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiddlywiki
spec:
  rules:
  - host: "wiki.lab.tintinho.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tiddlywiki
            port:
              number: 80
